--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^1.0.0-beta.3",
-    "ai": "^4.3.19",
+    "ai": "^5.0.0-beta.25",
     "chalk": "^5.4.1",
     "discord.js": "^14.21.0",
     "pg": "^8.16.3",
