Add comprehensive memory system documentation and utility functions for AI integration

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
-    "unicode-emoji-json": "^0.8.0"
+    "unicode-emoji-json": "^0.8.0",
+    "zod": "^4.0.8"
   }
 }
