--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@openrouter/ai-sdk-provider": "^1.0.0-beta.3",
-    "ai": "^5.0.0-beta.25",
+    "@openrouter/ai-sdk-provider": "0.7.3",
+    "ai": "4",
     "chalk": "^5.4.1",
     "discord.js": "^14.21.0",
     "pg": "^8.16.3",
