--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "sharp": "^0.34.5",
     "sqlite3": "^5.1.7",
     "unicode-emoji-json": "^0.8.0",
     "zod": "^3.23.8"
